--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                         return;
                     }
                 });
+
+                if (this.position.x >= canvas.width || this.position.x < 0) {
+                    this.position.x = canvas.width - this.position.x;
+                }
+                if (this.position.y >= canvas.height || this.position.y < 0) {
+                    this.position.y = canvas.height - this.position.y;
+                }
             }
 
             addBody() {
