--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                     }
                 });
 
-                if (this.position.x >= canvas.width || this.position.x < 0) {
+                if (this.position.x > canvas.width || this.position.x < 0) {
                     this.position.x = canvas.width - this.position.x;
                 }
-                if (this.position.y >= canvas.height || this.position.y < 0) {
+                if (this.position.y > canvas.height || this.position.y < 0) {
                     this.position.y = canvas.height - this.position.y;
                 }
             }
